fix issue too long content without wrap in IE6 will make layout broken

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -347,6 +347,7 @@ body .narrow-mainborder {
 
 .topic .words {
 	margin:10px;
+	word-wrap:break-word;
 }
 
 .topic .words img {
